# Fari-Makefile

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
cJson/: Readme.md  cJSON.c  cJSON.h
test/: CMakeLists.txt  testCommand.c  testLogs.c  testParser.c  testSet.c
test/testFileForCommands/: java_command_test  java_flag_command_test  java_library_command_test
test/testFileForParser/: blank_return_linux  blank_spaces  blank_tabs  command_test  comments_multiple  comments_simple  complex_file  executable_name_long  executable_name_multiple  header_multiple  header_redefinition  header_simple  java_complete_command_test  java_flag  java_header  java_lib  java_simple  linked_headers
test/testForFari/set1/: farifile  log.c
test/testForFari/set2/: farifile  log_aux.h
test/testForFari/set3/: farifile  farifile2  farifile3  farifile4  farifile5  genres.c  genres.h  main.c  makefile  movie.c  movie.h  movies.c  movies.csv  movies.h  parser.c  parser.h  test_genres.c  test_movie.c  test_movies.c
test/testForFari/set4/: farifile  test1.java  test2.java  test3.java
test/testForFari/set5/: README.md  farifile
test/testForFari/set6/: README.md  farifile  log.c  log.h  log_aux.c
test/testForFari/set7/: README.md  farifile
test/testForFari/set7/src/src1/: log.c
test/testForFari/set7/src/src2/: log_aux.c
test/testForFari/set8/: farifile  log.c  log_aux.c
test/testForFari/set9/: farifile  log.c  log_aux.c
test/testForLogs/set1/: farifile
test/testForLogs/set2/: farifile
test/testForLogs/set3/: farifile
test/testForLogs/set4/: farifile
(+17 files in other folders)
